deps/v8/test/message/fail/this-iterator-undefined.out
# Copyright 2020 the V8 project authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.
*%(basename)s:6: TypeError: this is not iterable
  for (const _ of this) {}
                  ^
TypeError: this is not iterable
    at t (*%(basename)s:6:19)
    at *%(basename)s:9:1
